welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:16: error: value gauche is not a member of Boolean
	porteBiscuit()gauche();gauche()
                      ^